# clownarena

./: .dockerignore  .gitignore  README.md  alembic.ini  api.env  cloudbuild.api.yaml  cloudbuild.judge.yaml  docker-compose.yml  judge.env  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
alembic/: env.py
alembic/versions/: 20260325_0001_initial.py  20260326_0002_duel_room_type.py  20260326_0003_submission_outputs.py  20260327_0004_problem_template_seeded.py
apps/: __init__.py
apps/api/: Dockerfile  __init__.py  main.py  package.json
apps/judge/: Dockerfile  __init__.py  package.json  worker.py
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/.git_backup/: COMMIT_EDITMSG  index
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/app/: layout.tsx  loading.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/components/: animated.tsx  app-content-fallback.tsx  app-shell.tsx  code-editor.tsx  duel-feed.tsx  feedback-provider.tsx  marketing-nav.tsx  panel.tsx  problem-editor.tsx  providers.tsx  top-nav.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  (+3 more)
apps/web/lib/: api.ts  app-shell.ts  auth-store.ts  formatters.ts  problem-import.ts  problem-templates.ts  use-session.ts
docs/: deployment-vercel-gcp.md  sample-problems.json  sample-problems.md
scripts/: seed_service_problems.py
tests/e2e/: core-flows.spec.ts
(+16 files in other folders)
