[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clownarena-backend"
version = "0.1.0"
description = "Backend services and judge domain for Clown Arena."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "asyncpg>=0.30.0",
  "dramatiq[redis]>=1.17.1",
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.6",
  "pydantic[email]>=2.11.1",
  "pydantic-settings>=2.8.1",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.39",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.2"
]

[project.scripts]
clownarena-api = "clownarena.api.main:run"
clownarena-judge = "clownarena.judge.worker:main"

[tool.poetry]
packages = [{ include = "clownarena", from = "packages/backend" }]

[tool.setuptools]
package-dir = {"" = "packages/backend"}

[tool.setuptools.packages.find]
where = ["packages/backend"]

[tool.pytest.ini_options]
pythonpath = ["packages/backend"]
testpaths = ["packages/backend/clownarena/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
